========================================

Changes marked with "(!!!)" may break backward compatibility.
Versions with "_xx" subversions are internal test releases.  Most
subversions are available from <http://www.newts.org/~troc/poe.html>.


0.0803 ----.--.--
-----------------

Incorporated Kevin Lenzo's patch for Wheel::ReadWrite's support of
separate input and output filehandles.


0.0802 1999.12.25
-----------------

Fixed the date for revision 0.0801 in the changes.

Added Kernel and Session IDs, at Philip Gwyn's insistence.  Each
session has a serial number, accessible by $session->ID().  POE's
kernel itself has a fairly unique ID, accessible by $poe_kernel->ID().


0.0801 1999.12.24
-----------------

Added &POE::Kernel::fork() to provide safe child reaping.  This fork()
uses an event loop to poll for reapable children.  It fires a CHLD
signal at the session that called &POE::Kernel::fork(), using POE's
soft signals to avoid potential problems with Perl's signal handling.

Changed the preforkedserver.perl example to use &POE::Kernel::fork(),
but the sample program seems to be hideously broken as designed.

POE's SIGCHLD handler takes over Apache's when it's used in mod_perl.
Changed POE::Kernel to not register a SIGCHLD handler if it's running
under mod_perl.

Added SIGIDLE, a kinder, gentler SIGZOMBIE.  When an entire process
becomes idle, POE broadcasts SIGIDLE to everyone.  SIGIDLE is a plain
terminal signal; sessions won't die if it's handled.  POE checks for
continued idle-ness after SIGIDLE is dispatched; if the process hasn't
awakened, then SIGZOMBIE is broadcast to reap things.

Fixed names.perl to show SIGIDLE being caught.

Reordered the lookups in &POE::Kernel::alias_resolve, placing the more
common ones first.  Forced a look-up, even for Session references, so
that it would return ESRCH errors on sessions that disappeared but
were still being referenced.


0.08 1999.11.26
---------------
