@@ -48,4 +48,5 @@ samples/socketfactory.perl
 samples/thrash.perl
 samples/tutorial-chat.perl
 samples/wheels.perl
+samples/wheels2.perl
 t/test.t
